@@ -201,25 +201,25 @@ endif PWEB
 ##
 ## ptexdir/nissya.test
 EXTRA_DIST += ptexdir/tests/nissya_bib.aux ptexdir/tests/nissya.bst ptexdir/tests/sample.bib
-DISTCLEANFILES += tests/nissya_bib.*
+DISTCLEANFILES += ptests/nissya_bib.*
 ## ptexdir/pbibtex.test
-DISTCLEANFILES += tests/xexampl.aux tests/xexampl.bbl tests/xexampl.blg
+DISTCLEANFILES += ptests/xexampl.aux ptests/xexampl.bbl ptests/xexampl.blg
 ## ptexdir/pbibtex-mem.test
 EXTRA_DIST += tests/memdata1.bst tests/memdata2.bst tests/memdata3.bst
 DISTCLEANFILES += ptests/memtest.bib ptests/memtest?.*
 ## ptexdir/pdvitype.test
-DISTCLEANFILES += tests/xstory.dvityp tests/xpagenum.typ
+DISTCLEANFILES += ptests/xstory.dvityp ptests/xpagenum.typ
 ## ptexdir/ppltotf.test
-DISTCLEANFILES += tests/xcmr10.tfm
+DISTCLEANFILES += ptests/xcmr10.tfm
 ## ptexdir/ptftopl.test
-DISTCLEANFILES += tests/xcmr10.pl
+DISTCLEANFILES += ptests/xcmr10.pl
 ## ptexdir/sample.test
 EXTRA_DIST += ptexdir/tests/goth10.tfm ptexdir/tests/sample.dvi
-DISTCLEANFILES += tests/xsample.typ
+DISTCLEANFILES += ptests/xsample.typ
 ## ptexdir/yokotate.test
 EXTRA_DIST += ptexdir/tests/min10.pl ptexdir/tests/min10.tfm
 EXTRA_DIST += ptexdir/tests/tmin10.pl ptexdir/tests/tmin10.tfm
-DISTCLEANFILES += tests/x*min10.*
+DISTCLEANFILES += ptests/x*min10.*
 ## ptexdir/ptrip.test
 EXTRA_DIST += ptexdir/ptrip/ptrip.diffs ptexdir/ptrip/texmf.cnf
 ptrip.diffs: ptex$(EXEEXT)
