@@ -1,19 +1,19 @@
 #! /bin/sh
 
-# Copyright (C) 2010-2012 Peter Breitenlohner <tex-live@tug.org>
+# Copyright (C) 2010-2013 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
-test -d tests || mkdir -p tests
+test -d ptests || mkdir -p ptests
 
 if tfmpath=`$KPSEWHICH cmbx10.tfm`; then
 
   TEXMFCNF=$srcdir/../kpathsea \
     TFMFONTS=`dirname "$tfmpath"` \
-    ./pdvitype -show-opcodes $srcdir/tests/story >tests/xstory.dvityp || exit 1
+    ./pdvitype -show-opcodes $srcdir/tests/story >ptests/xstory.dvityp || exit 1
 
 fi
 
 TEXMFCNF=$srcdir/../kpathsea \
   TFMFONTS=$srcdir/tests \
-  ./pdvitype --p=\*.\*.2 $srcdir/tests/pagenum.dvi >tests/xpagenum.typ || exit 1
+  ./pdvitype --p=\*.\*.2 $srcdir/tests/pagenum.dvi >ptests/xpagenum.typ || exit 1
 
