@@ -1,9 +1,9 @@
 #! /bin/sh
 
-# Copyright (C) 2010-2012 Peter Breitenlohner <tex-live@tug.org>
+# Copyright (C) 2010-2013 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
-test -d tests || mkdir -p tests
+test -d ptests || mkdir -p ptests
 
 tfmpath=`$KPSEWHICH cmbx10.tfm` || exit 77
 
@@ -15,5 +15,5 @@ testdir=$srcdir/ptexdir/tests
 
 TEXMFCNF=$srcdir/../kpathsea \
   TFMFONTS=$testdir:`dirname "$tfmgrandparent"`// \
-  ./pdvitype -show-opcodes $testdir/sample >tests/xsample.typ || exit 1
+  ./pdvitype -show-opcodes $testdir/sample >ptests/xsample.typ || exit 1
 
